JOE 3.1
- Regex and incremental search (jmacs ^S) now work for UTF-8
- More and improved syntax highlighting files
- Use ^T E to set character set of file (hit <tab> <tab> for
  lists of character sets).
- Can install custom "i18n" style byte oriented character set
  definition files.
- No longer depends on iconv() (easier to compile)
- Fix bug where right arrow was not doing right thing on last line
- Fix UTF-8 codes between 0x10000 - 0x1FFFF
- Now prints <XXXX> for unicode control characters
- Improved smart home, indent, etc.
- TAB completion is now more "bash"-like
- When multiple files are given on command line, they end up in
  same order on the screen in JOE (before they were shuffled).
- Menu size is now variable (40% of window size or smaller if
  it's not filled).
- Added -icase option for case insensitive search by default.
- Added -wrap option, which makes searches wrap
- Added status line sequence %x: shows current context (function
  name if you're editing C).
- Added tab completion at search prompts and ^K <return> for tab
  completion in text windows.
- Warn if file changed on save.
- Added Ctrl-space block selection method
- ^K E asks if you want to load original version of the file
- jmacs bugs fixes: upperase word, transpose words, ^X ^C is
  more emacs-like., ^X k and ^X ^V more like emacs.
- Much improved compile system ^[ c

JOE 3.0 (23 APR 2004)
- UTF-8
- Syntax highlighting
- Fixed ^C and ^D in shell windows
- Auto detect CR-LF (MS-DOS) files
- Fixed (or improved, anyway) shell windows for Cygwin
- During search & replace, the scroll found text on to screen
- File selection window is now 4 lines instead of 1
- David Phillips "smart home" key.
- Enhanced ^K , and ^K .
- Enhanced overtype mode
- Added picture drawing mode (can hit right arrow at ends of lines)
- Auto detect preferred indentation character TAB or SPACE

Overview of changes in JOE 2.9.8 (5 May 2003)
- fixed signal handling
- return of the context help